[fix] docker compose
volume, env file 연결

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
       - db
     ports:
       - "8000:8000"
+    volumes:
+      - ./scheduler:/app
+    env_file:
+      - .env.local
 
   nginx:
     depends_on:
