[fix] SERVER_IP 환경변수 변경
HOST_URL이 더 목적에 올바름

--- a/scheduler/django.nginx.conf
+++ b/scheduler/django.nginx.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name localhost $SERVER_IP;
+	server_name localhost $HOST_URL;
 
 	location / {
 		proxy_pass http://backend:8000;
