--- a/scheduler/dockerfile
+++ b/scheduler/dockerfile
@@ -13,8 +13,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . ${APP_NAME}
 
-COPY ./start.sh /start
+COPY ./script/start.sh /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
+
+COPY ./script/entrypoint /entrypoint
+RUN sed -i 's/\r$//g' /entrypoint
+RUN chmod +x /entrypoint
+
+ENTRYPOINT [ "/entrypoint" ]
 
 CMD [ "/start" ]
